Add 'Restore Test Content' feature and improve backup compatibility
Introduces a 'Restore Test Content' button in the UI and fixes a minor bug that prevented writing in the fields of new or existing projects.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         </div>
         <input type="file" id="import-file" style="display:none" accept=".json">
         <div style="margin-top:8px;">
+          <button id="restore-test-btn" class="btn-secondary" style="width:100%; font-size:12px;"
+            data-i18n="btn_restore_test">Restore Test Content</button>
+        </div>
+        <div style="margin-top:8px;">
           <button id="clear-btn" class="btn-danger" style="width:100%; font-size:12px;"
             data-i18n="btn_clear_content">Clear Content</button>
         </div>
